--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./assets/css/main.css">
 </head>
 <body>
-    <button id="btn">Your age</button>
+    <!-- <button id="btn">Your age</button> -->
     <script src="./assets/js/app.js"></script>
 </body>
 </html>
